--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /app
 
 RUN python3 -m venv /opt/venv
 
-RUN pip install pip --upgrade
-RUN /opt/venv/Scripts/pip install -r requirements.txt
+RUN /opt/venv/Scripts/pip install pip --upgrade && \
+    /opt/venv/Scripts/pip install -r requirements.txt && \
+    chmod +x entrypoint.sh 
 
-RUN chmod +x entrypoint.sh
 
 CMD ["/app/entrypoint.sh"]
