--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -9,5 +9,10 @@ RUN /opt/venv/Scripts/pip install pip --upgrade && \
     /opt/venv/Scripts/pip install -r requirements.txt && \
     chmod +x entrypoint.sh 
 
+    # or
+# RUN /opt/venv/bin/pip install pip --upgrade && \
+#     /opt/venv/bin/pip install -r requirements.txt && \
+#     chmod +x entrypoint.sh 
+
 
 CMD ["/app/entrypoint.sh"]
